1995-04-22  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c:
	change interface of 'setmtime()' to avoid clobbering 'atime' value (larry ammann)

	* user/ded.man: corrected description of sort-by-modification date

1995-04-01  Thomas E. Dickey  <dickey@clark.net>

	* src/dedsize.c: added a 'working' latch

	* src/dedsize.c: use MODULE_ID

1995-01-28  Thomas E. Dickey  <dickey@clark.net>

	* src/Makefile: some cleanup of symbols

	* test/test2.cmd: new modules

	* src/ftree.c: fix test-cases with missing log-message

	* test/test1.cmd: new modules

	* src/ded.c: 'box' variable shadows something in bsd-curses

	* src/dedview.c, src/ftree.c: use 'addchnstr()' compatibility function

1995-01-06  Thomas E. Dickey  <dickey@clark.net>

	* src/dedline.c:
	corrected shift-count used to apply chmod-mask when editing octal number

1994-12-16  Thomas E. Dickey  <dickey@clark.net>

	* src/dlog.c: guarded ifdef for <stdarg.h>

	* src/dedview.c, src/ftree.c: corrected ifdef for addchnstr

	* src/ded.h: guarded ifdef for <stdarg.h>

1994-11-22  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.h: added quitVIEW

	* src/dedring.c: invoke quitVIEW to cleanup if we've got to

	* src/dedview.c: added quitVIEW function

	* src/ded.c: suppress type-ahead if we can

1994-11-13  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c: corrected logic that supports -sz, -sZ options

	* src/ftree.c:
	fixes for the special case when I create a leaf directory _before_ the RCS
	leaf (wasn't initializing the NOSCCS flags, etc.)

	* src/ded2s.c: use MODULE_ID

	* src/ded2s.c: use function 'in_group()'

1994-10-19  Thomas E. Dickey  <dickey@clark.net>

	* src/dedview.c:
	corrected a limit-check for very long colored filenames

1994-10-17  Thomas E. Dickey  <dickey@clark.net>

	* src/dedcolor.c: compiler warning: uninitialized variable 'found'

	* src/dedcolor.c: use MODULE_ID

1994-10-16  Thomas E. Dickey  <dickey@clark.net>

	* src/dedring.c: