@@ -1,3 +1,11 @@
+1995-07-04  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/ded.c, src/ftree.c: use ungetch instead of ungetc
+
+	* src/dedsigs.c: toggle 'enable_winch()'
+
+	* src/dedsigs.c: use MODULE_ID
+
 1995-04-22  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/ded.c:
